form indo pro back

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -11,10 +11,10 @@
                 <hr>
                 <form method="POST" action="/salvarpergunta">
                     <label for="titulo">Titulo:</label>
-                    <input type="text" id="titulo" placeholder="titulo" class="form-control">
+                    <input name="titulo" type="text" id="titulo" placeholder="titulo" class="form-control">
                     <br>
                     <label for="descricao">Descrição:</label>
-                    <textarea placeholder="descreva sua pergunta aqui!" id="descricao" cols="20" class="form-control" rows="5"></textarea>
+                    <textarea name="descricao" placeholder="descreva sua pergunta aqui!" id="descricao" cols="20" class="form-control" rows="5"></textarea>
                     <br>
                     <input type="submit" value="Perguntar" class="btn btn-success">
                 </form>
